# indra2

./: CMakeLists.txt  CMakePresets.json  fractal-engine-design.md  imgui.ini
docs/superpowers/plans/: 2026-04-16-reconstruct-pipeline.md  2026-04-16-taa.md
docs/superpowers/specs/: 2026-04-16-reconstruct-pipeline-design.md  2026-04-16-taa-design.md
shaders/: common.metal  present.metal  raymarch.metal  reconstruct.metal
src/: gui.cpp  gui.h  main.cpp  math_util.h  metal_backend.h  metal_backend.mm  shader_manager.cpp  shader_manager.h  state_serializer.cpp  state_serializer.h  types.h
